--- a/src/config.json
+++ b/src/config.json
@@ -1,4 +1,4 @@
 {
-    "data_root_folder": "C:\\Users\\ai.denisov\\DATA",
-	"output_folder": "C:\\Users\\ai.denisov\\Images"
+    "data_root_folder": "C:\\Users\\yonder\\Desktop\\figure_painter\\data",
+	"output_folder": "C:\\Users\\yonder\\Desktop\\figure_painter\\out"
 }
